--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - checkout
       - continuation/continue:
-          configuration_path: test_config.yml
+          configuration_path: ./.circleci/test_config.yml
       - run:
           name: print test
           command: sudo apt update && sudo apt install vim -y && sudo apt install bind-utils && navu
