--- a/.circleci/test_config.yml
+++ b/.circleci/test_config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 jobs:
-  build:
+  build2:
     docker:
       - image: cimg/ruby:3.1.0
     steps:
@@ -13,4 +13,5 @@ jobs:
 workflows:
   new_workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
     jobs:
-      - build
+      - build2
+
